--- a/dawaiApp/templates/handv.html
+++ b/dawaiApp/templates/handv.html
@@ -12,7 +12,7 @@
         <div class="col-md-2"></div>
       </div>
     </div>
-  </div>herboon
+  </div>
   <div class="text-center pt-3 pb-3">
     <div class="container">
       <div class="row">
