--- a/dawaiApp/templates/template.html
+++ b/dawaiApp/templates/template.html
@@ -28,6 +28,7 @@
               </div>
           </li>
           <li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="/downloadApp">Download App</a></li>
         </ul>
         <ul class="navbar-nav">
         {% if request.session.id %} 
